Volley GET implemented

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,4 +19,13 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:textSize="40sp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Volley"
+        android:id="@+id/button"
+        android:layout_below="@+id/time_display"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="95dp" />
 </RelativeLayout>
